--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                 alert('Please fill in both username and password fields.');
                 return false;
             }
-            alert('Login successful!');
-            // Normally, form submission or further processing would happen here
+            // redirect to landing page after successful sign in
+            window.location.href = 'https://hrt4sm1.github.io/landing-page/index.html';
         }
     </script>
 </head>
