--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="right">
             <h1>Welcome to login</h1>
             <p>Don't have an account?</p>
-            <button class="signup-btn" onclick="window.location.href='https://hrt4sm1.github.io/landing-page/index.html'">Sign Up</button>
+            <button class="signup-btn">Sign Up</button>
         </div>
     </div>
 </body>
